--- a/Wacdonald/src/app/components/sidebar/sidebar.component.scss
+++ b/Wacdonald/src/app/components/sidebar/sidebar.component.scss
@@ -1,10 +1,7 @@
 :host{
     display: flex;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    right: 0;
     width: 115px;
+    height: 667px;
     background: #fbfbf9;
     padding: 14px;
     border-left: 1px solid #f7f7f7;
